@@ -7,6 +7,7 @@
 * Fixed logic for flower splosion for double plants.
 * Buffed artifact drop chance and added raffle tickets.
 * All skills & abilities are now toggleable! Just click on them!
+* No longer see those annoying "teleport" messages when using weirwood trees or the batman ability.
 
 # 1.12.2-1.2
 * You can no longer apply books to artifacts.
